@@ -1,3 +1,0 @@
-{
-    "condition": "lavidacraft.misc.leatherArmor"
-}
