@@ -88,7 +88,6 @@
             destroy: true,
             diamondArmor: true,
             enchantGlint: true,
-            leatherArmor: true,
             netheriteArmor: true,
             pumpkinBlur: true
         }
